<resources>
    <string name="launch_name">Capture</string>
    <string name="app_name">KMC</string>
    <string name="app_version">2.4</string>
    <string name="title_section2">Pending</string>
    <string name="title_help_kofax">Assist Kofax</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="str_save">Save</string>
    <string name="str_servers">Servers</string>
    <string name="str_empty"></string>
    <string name="str_no_internet_connection_available">Offline Mode</string>
    <string name="str_account_info">Account Information</string>
    <string name="str_use_kofax_server">Use Kofax Server</string>
    <string name="str_server_host_name">Server Hostname</string>
    <string name="str_server_type">Server Type</string>
    <string name="str_nickname">Nickname</string>
    <string name="str_ssl">SSL</string>
    <string name="str_port">Port</string>
    <string name="str_domain">Domain</string>
    <string name="str_user_name">Username</string>
    <string name="str_password">Password</string>
    <string name="str_email">Email</string>
    <string name="str_advanced_options">Advanced Options</string>
    <string name="str_motion_sensitivity">Motion Sensitivity</string>
    <string name="str_manual_capture">Manual Capture</string>
    <string name="str_manual_capture_time">Manual Capture Time(Sec)</string>
    <string name="str_preview_image">Preview Image</string>
    <string name="str_url">URL</string>
    <string name="str_confirm_dont_show_this_message_again">Don\'t show this message again</string>
    <string name="str_info">Info</string>
    <string name="str_about_kmc">About KMC</string>
    <string name="str_license_agreement">License Agreement</string>
    <string name="str_help_info">Help Info</string>
    <string name="str_help_info_cap">HELP INFO</string>
    <string name="str_mobile_capture">KOFAX MOBILE CAPTURE</string>
    <string name="str_app_version">Version</string>
    <string name="str_app_sdk_version">KMC SDK Version</string>
    <string name="str_app_privicy"> Privacy Statement\n© 2016 Kofax, Inc. All rights reserved.</string>
    <string name="str_app_patents">Patents Pending</string>
    <string name="str_app_patents_text">Use is subject to license terms. \n\nThird party software is copyrighted and licensed from Kofax\'s suppliers. \n\nKofax, the Kofax logo, and the Kofax product names stated herein are trademarks or registered trademarks of Kofax in the U.S. and other countries. All other trademarks are the trademarks or registered trademarks of their respective owners.</string>
    <string name="str_app_techsupport">Kofax Technical Support</string>
    <string name="str_app_techsupport_link">www.kofax.com/support</string>
    <string name="str_app_homepage">Kofax, Inc. Home Page</string>
    <string name="str_app_homepage_link">www.kofax.com</string>
    <string name="str_app_license_arg">END USER LICENSE AGREEMENT</string>
    <string name="str_app_license_arg_text"><b>IMPORTANT NOTICE: By downloading or installing any Kofax Software Products to Your (or your employer’s) computer(s) or network, You are agreeing to be bound by the terms and conditions of this Software License Agreement. If You are downloading or installing Kofax Software in connection with your employment by a business or other entity you represent or work for, you are further representing to Kofax that You are authorized and agree to bind such business or entity to this Agreement in connection with downloading , installing or using any Kofax Software Product (in which case the term “You” as used in this Agreement refers to such business or entity. Use of Kofax Software Products may further require a license key or product registration.</b></string>
    <string name="str_app_license_title1"><b>1. Software License.</b></string>
    <string name="str_app_license_text1">  Kofax, Inc. ("Kofax") grants to You a limited, non-exclusive license right (the “License”) to install and use the downloaded Kofax Software Product(s) (the “Software”). The License allows You to use the Software in object code form only for the purposes (internal use, evaluation, testing, demonstration, disaster recovery), duration and extent for which You have paid the appropriate license fees, as evidenced by one or more valid and mutually agreed upon purchase order documents between You and Kofax or an authorized Kofax reseller identifying the product(s) licensed (the ”Software”) and any applicable limitations on use (such as volume limitations or concurrent client module use limitations). Where Your License is limited on an annual volume basis, Your authorized volume usage limit shall pertain to the 12 month period commencing from the date the Software is delivered to You. The License includes the right to use the Software in connection with providing document handling services on behalf of clients as a business process outsourcer or service bureau. Any features or functionality to be included in any future or subsequent releases of the Software are at the sole discretion of Kofax and nothing in this Agreement should be interpreted or construed to include any right on Your part to receive any specific features or functionality in the future.</string>
    <string name="str_app_license_title2"><b>2. Term "&amp;" Termination.</b></string>
    <string name="str_app_license_text2">  The License shall remain in effect perpetually unless terminated in accordance with the terms of this Agreement. You may terminate this Agreement and the License at any time by certifying destruction of all copies of the Software and associated documentation. This Agreement will further terminate upon Your failure to cure any material breach of this Agreement within 30 days of written notice from Kofax regarding such breach. In the event of termination, regardless of cause, the License will immediately terminate, and you will promptly destroy all copies of the Software. Sections 6, 7, and 10-17 of this Agreement, and the obligations embodied therein, will survive any termination of this Agreement.</string>
    <string name="str_app_license_title3"><b>3. Support Services.</b></string>
    <string name="str_app_license_Kofax_Support_Commitment"><b> Kofax Support Commitment </b></string>
<string name="str_app_license_text3">  Kofax or an authorized Kofax reseller will provide support services for which You have paid the required annual support fees, subject to the terms and conditions of this Agreement and the </string>
    <string name="str_app_license_text3_1"> (the ”Support Commitment”), the current version of which are available at all times at www.Kofax.com/support/ and which is incorporated herein by reference. What is included and excluded from the services, and other requirements, is described in the Support Commitment. Kofax may make minor revisions to the Support Commitment from time to time without notice to You. Support pricing shall be as quoted and agreed upon between the Parties for the initial term, and shall increase for renewal terms by an amount not to exceed 5% of the prior year term fee, provided that increases associated with additional software license purchases, if any, shall be incorporated into the base for the purpose of calculation of each annual increase. The initial one year support services term will begin on the first day of the month following the invoice date of the Software. For as long as Kofax makes support services for the Software generally available to all of its customers, this Agreement will automatically renew on each anniversary date thereafter for a new one year term, unless You give Kofax 60 days written notice, prior to the end of the current term, of Your intent not to renew. Kofax will invoice You for renewal fees up to 60 days prior to expiration of each term. Kofax may terminate and suspend performance of all support services if You fail to pay any past due Kofax invoice within 10 days of written notice of such failure, in the event of any other material breach by You which remains uncured 30 days after notice thereof or if any of the Software ceases to be subject of a valid Software License Agreement. Kofax will not provide support following expiration of this Agreement. In the event You desire support to be reinstated following expiration, You agree: 1) to pay a reinstatement fee   equal to the current annual support fee and any unpaid support fees from the date of expiration to the date of reinstatement; and 2) to pay for at least one additional year of support services from the date of reinstatement. All software maintenance releases, updates, patches, workarounds or other software and/or documentation furnished to You pursuant to this Agreement shall be deemed to be Software, as that term is used herein. Upon receipt and installation of a software maintenance release to a Software program, You may keep (in addition to the current revision archival copy permitted hereunder) one copy of the previous version of that Software for archival purposes only and shall destroy all other copies of the previous version.  </string>
    <string name="str_app_license_title4"><b>4. Professional Services Engagements.</b></string>
    <string name="str_app_license_text4">  All professional services engagements shall be performed under a separate professional services agreement, mutually agreed upon in writing by authorized representatives of each of us. Any fees for Software hereunder shall be due and payable under the terms set forth in Section 5 of this Agreement, and shall not be dependent or contingent in any way upon the performance or completion of any separate professional services engagement.</string>
    <string name="str_app_license_title5"><b>5. Price-Payment-Delivery.</b></string>
    <string name="str_app_license_text5">  All rights granted in this Agreement are conditional upon payment of the appropriate fees. Invoices are due and payable 30 days from date of invoice. You agree to pay or reimburse all sales, use, VAT or excise taxes, duties or assessments arising on or measured by amounts payable to Kofax hereunder. You are not responsible for Kofax’s income taxes.  All tangibles will be delivered FOB Kofax’s offices.</string>
    <string name="str_app_license_title6"><b>6. Copyright.</b></string>
    <string name="str_existing_item_desc">Created new document and not submitted to server, this item will be in existing document list. Submit them whenever intended.</string>
    <string name="str_edit_information">Edit Information</string>
    <string name="str_add_images">Add Images</string>
    <string name="str_more">More</string>
    <string name="str_change_type">Change Type</string>
    <string name="str_select">Select</string>
    <string name="str_revert_images">Revert Images</string>
    <string name="str_delete_images">Delete Images</string>
</resources>