<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbglightgray"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="35dp"
        android:background="#ffffff" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/appbggray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/str_about_kmc"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/str_empty"
            android:paddingBottom="5dip"
            android:src="@drawable/arrow_right"
            android:text="@string/str_existing_item_desc"
            android:textStyle="normal" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/appbggray" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/license_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/str_license_agreement"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/str_empty"
            android:paddingBottom="5dip"
            android:src="@drawable/arrow_right"
            android:text="@string/str_existing_item_desc"
            android:textStyle="normal" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/appbggray" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/helpinfo_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/str_help_info"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/str_empty"
            android:paddingBottom="5dip"
            android:src="@drawable/arrow_right"
            android:text="@string/str_existing_item_desc"
            android:textStyle="normal" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/appbggray" />
    </RelativeLayout>

</LinearLayout>